fix: remove gap between image slides

--- a/app/components/Modal/styles.css
+++ b/app/components/Modal/styles.css
@@ -10,4 +10,5 @@
 
 .image.slide {
   border-radius: 0;
+  margin: 0;
 }
